--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.2.2
-pandas==1.5.2
-firebase-admin==6.0.1
-gunicorn==20.1.0
-python-dotenv==0.21.0
+Flask==2.3.3
+pandas==2.1.4
+firebase-admin==6.2.0
+gunicorn==21.2.0
+python-dotenv==1.0.0
+Werkzeug==2.3.7
