--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.3.3
-pandas==2.0.3
+Flask==2.2.5
+pandas==1.5.3
+numpy==1.24.3
 firebase-admin==6.2.0
-gunicorn==21.2.0
+gunicorn==20.1.0
 python-dotenv==1.0.0
-Werkzeug==2.3.7
+Werkzeug==2.2.3
